Apr 14 1998	 Initial prepar module routines