@@ -1,1 +1,2 @@
 Apr 14 1998	 Initial prepar module routines
+		 Add routines for rtdb input, third and excluded lists
